[package]
name = "piko-milky"
version = "0.1.0"
edition = "2024"

[dependencies.tracing]
version = "0.1.41"

[dependencies.async-trait]
version = "0.1.88"

[dependencies.serde]
version = "1.0.219"
features = ["rc", "derive"]

[dependencies.sonic-rs]
version = "0.5.1"

[dependencies.fast-str]
version = "1.0.0"
features = ["serde"]

[dependencies.anyhow]
version = "1.0.98"

[dependencies.thiserror]
version = "2.0.12"

[dependencies.tokio]
version = "1.45.1"
features = ["full"]

[dependencies.futures]
version = "0.3.31"

[dependencies.futures-util]
version = "0.3.31"

[dependencies.pin-project]
version = "1.1.10"

[dependencies.reqwest]
version = "0.12.15"

[dependencies.reqwest-websocket]
version = "0.5.0"